// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fAQ > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
      >
        <div />
        <div>
          <p
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owj uv_m4c9owr uv_m4c9ow1b uv_m4c9ow3d"
          >
            Title
          </p>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow3c"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with illustrationTest 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
      >
        <div>
          <div
            class="uv_1jy42m00 uv_1jy42m01 uv_1jy42m0c uv_1jy42m0f"
          >
            1
          </div>
        </div>
        <div>
          <p
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owj uv_m4c9owr uv_m4c9ow1b uv_m4c9ow3d"
          >
            Title
          </p>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow3c"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with notes 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
      >
        <div />
        <div>
          <p
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owj uv_m4c9owr uv_m4c9ow1b uv_m4c9ow3d"
          >
            Title
          </p>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow3c"
          >
            Description
            <small
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow3 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ows uv_m4c9ow1b uv_m4c9ow3c"
            >
              Notes
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`fAQ > should work with productIconName 1`] = `
<DocumentFragment>
  .emotion-0 {
  padding: 1rem;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 uv_1p7tz3i1"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="uv_toi52u0 uv_toi52u31 uv_toi52u2j uv_toi52u7d uv_toi52ud uv_toi52u5d"
      >
        <div>
          <svg
            class="styles_xlarge__q76b9r3 styles_primary__q76b9r5"
            viewBox="0 0 64 64"
          >
            <g
              class="sentiment=original, size=xlarge, disabled=false"
              clip-path="url(#a)"
            >
              <g
                class=".Square"
              >
                <g
                  class="fillWeak"
                >
                  <path
                    d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48V16Z"
                    fill="#521094"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14ZM16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16H16Z"
                    fill="#521094"
                    fill-rule="evenodd"
                  />
                </g>
              </g>
              <g
                class="Icon"
              >
                <path
                  class="fillStrong"
                  clip-rule="evenodd"
                  d="M32 16.5c-8.56 0-15.5 6.94-15.5 15.5 0 3.1.909 5.984 2.474 8.404a1 1 0 0 1 .126.802l-1.608 6.003 6.33-1.696a1 1 0 0 1 .739.089A15.426 15.426 0 0 0 32 47.5c8.56 0 15.5-6.94 15.5-15.5 0-8.56-6.94-15.5-15.5-15.5ZM14.5 32c0-9.665 7.835-17.5 17.5-17.5S49.5 22.335 49.5 32 41.665 49.5 32 49.5a17.43 17.43 0 0 1-8.042-1.953l-7.622 2.042a1 1 0 0 1-1.224-1.225l1.943-7.254A17.423 17.423 0 0 1 14.5 32Z"
                  fill="#BF95F9"
                  fill-rule="evenodd"
                />
                <g
                  class="fill"
                >
                  <path
                    clip-rule="evenodd"
                    d="M32 11c-11.598 0-21 9.402-21 21 0 3.631.92 7.045 2.541 10.022a1 1 0 1 1-1.757.956A22.903 22.903 0 0 1 9 32C9 19.297 19.297 9 32 9s23 10.297 23 23-10.297 23-23 23c-3.35 0-6.536-.717-9.41-2.007a1 1 0 1 1 .82-1.825A20.92 20.92 0 0 0 32 53c11.598 0 21-9.402 21-21s-9.402-21-21-21Z"
                    fill="#fff"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M30.32 35.22v-.768c0-.8.152-1.448.456-1.944.32-.512.848-.936 1.584-1.272l.456-.216c.752-.352 1.328-.728 1.728-1.128.4-.416.6-.968.6-1.656 0-.512-.128-.944-.384-1.296-.256-.368-.616-.648-1.08-.84-.448-.192-.968-.288-1.56-.288-.624 0-1.184.104-1.68.312-.48.208-.872.52-1.176.936-.288.4-.432.912-.432 1.536v.624H26v-.576c0-1.104.264-2.048.792-2.832.544-.8 1.28-1.408 2.208-1.824.928-.416 1.968-.624 3.12-.624 1.136 0 2.144.208 3.024.624.88.416 1.568.992 2.064 1.728.512.72.768 1.56.768 2.52 0 .944-.176 1.72-.528 2.328a4.391 4.391 0 0 1-1.32 1.488 11.22 11.22 0 0 1-1.68.984l-.48.216c-.288.128-.488.288-.6.48-.112.192-.168.464-.168.816v.672h-2.88Zm1.512 5.616c-.592 0-1.096-.192-1.512-.576-.4-.4-.6-.912-.6-1.536s.2-1.136.6-1.536c.416-.4.92-.6 1.512-.6.608 0 1.112.2 1.512.6.416.4.624.912.624 1.536s-.208 1.136-.624 1.536c-.4.384-.904.576-1.512.576Z"
                    fill="#fff"
                  />
                </g>
              </g>
            </g>
            <defs>
              <clippath
                class="a"
                id="a"
              >
                <path
                  d="M0 0h64v64H0z"
                  fill="#fff"
                />
              </clippath>
            </defs>
          </svg>
        </div>
        <div>
          <p
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owj uv_m4c9owr uv_m4c9ow1b uv_m4c9ow3d"
          >
            Title
          </p>
          <div
            class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9own uv_m4c9ow1b uv_m4c9ow3c"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
